// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AdminLink should not render border when not active 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-10ueqj0-MuiTypography-root-MuiLink-root"
    data-discover="true"
    href="/admin/event"
  >
    <div
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-noWrap css-2hh3d3-MuiTypography-root"
    >
      admin
    </div>
  </a>
</div>
`;

exports[`AdminLink should render active border 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1yjuoko-MuiTypography-root-MuiLink-root"
    data-discover="true"
    href="/admin/event"
  >
    <div
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-noWrap css-2hh3d3-MuiTypography-root"
    >
      admin
    </div>
  </a>
</div>
`;

exports[`AdminLink should render with minimal properties 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-10ueqj0-MuiTypography-root-MuiLink-root"
    data-discover="true"
    href="/admin/event"
  >
    <div
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-noWrap css-2hh3d3-MuiTypography-root"
    >
      admin
    </div>
  </a>
</div>
`;
